--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -17,10 +17,18 @@ html {
 body {
   color: #545149;
   background-color: #f4f1ec;
-  font-size: 24px;
+  font-size: 1.5em; /* 24 px */
   font-family: 'Source Sans Pro', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+   display: flex;
+   flex-direction: column;
+   margin: 0em auto;
+   width: 90%;
+   position: relative;
+ }
