--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -10,20 +10,25 @@ article.tweet {
 
 article.tweet header {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   font-size: 0.9em;
   font-weight: 300;
   margin: 1em;
 }
 
+article.tweet .username {
+  display: flex;
+}
+
 article.tweet .pfp {
-  float: left;
-  max-width: 10%;
+  width: 4em;
   height: auto;
   border-radius: 50%;
 }
 
 article.tweet .username h3 {
-  margin: 1em;
+  margin-left: 0.8em; 
   font-size: 1em;
   font-weight: lighter;
 }
