adds box shadow when hover over tweet post

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -26,6 +26,7 @@ article.tweet .username {
   display: flex;
 }
 
+/* resizes all pfp to standard size */
 article.tweet .pfp {
   width: 4em;
   height: auto;
@@ -68,7 +69,6 @@ article.tweet footer {
 }
 
 /* styling for links */
-
 a:link {
   color: #4056A1;
 }
