--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,9 +11,7 @@ nav {
   width: 100%;
   background-color: #4056A1;
   color: #FFFFFF;
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  padding-top: 2.5em;
+  padding: 2.5em 1.5em 0 1.5em;
   position: sticky;
   top: 0;
   z-index: 1;
