--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -40,3 +40,13 @@ main {
   width: 110%;
   height: 100%;
 }
+
+/* display error if user tweet is too long or empty */
+#er {
+  text-align: center;
+  font-size: 0.8em;
+  color: red;
+  border: 0.2em solid red;
+  padding: 0.5em;
+  margin: 1em 0 0 0;
+}
