--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -25,24 +25,70 @@ body {
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
+
+
+  Stylizes profile header, profile image, user
+
  */
 
- main {
+main {
   margin: 0 auto;
   width: 90%;
   position: relative;
- }
+}
 
- header {
+header {
   justify-content: center;
+}
 
- }
 
- /* resize pfp */
+/* Stylize header use name to match tweet button */
+.user-name h2 {
+  font-weight: 400;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+  color: #545149;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1em;
+  width: 100%;
+  position: relative;
+  transform: rotate(-2deg);
+  padding:0.1em;
+}
+
+ /* Resize profile pic as necessary */
 #header_profile_pic {
   display: block;
   margin: 0 auto;
   border-radius: 50%;
-  width: 8em;
+  width: 200px; /* explicit width for header profile image */
   height: auto;
+}
+
+/* offset container position due to hidden form */
+#tweets-container {
+  margin-top: 2em;
+}
+
+/* desktop and larger styles */
+
+@media only screen and (min-width: 1024px) {
+  body {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  #header-profile {
+    margin: 10em 4em auto 3em;
+    max-width: 500px;
+    width: 100%;
+  }
+
+  #content {
+    padding-top: 8.5em;  
+    position: relative;
+    width: 100%;
+  }
+
+  
 }
