adds comments and eslints code

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -12,3 +12,26 @@ header.profile {
   background-color: #dba8d0;
   background-image: url("../images/dust.png");
 }
+
+/* Stylize header use name to match tweet button */
+.user-name h2 {
+  font-weight: 400;
+  background-color: #FFFFFF;
+  box-sizing: border-box;
+  color: #545149;
+  font-family: 'Source Sans Pro', sans-serif;
+  line-height: 1em;
+  width: 100%;
+  position: relative;
+  transform: rotate(-2deg);
+  padding:0.1em;
+}
+
+ /* Resize profile pic as necessary */
+#header_profile_pic {
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+  width: 200px; /* explicit width for header profile image */
+  height: auto;
+}
