--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -41,37 +41,12 @@ header {
   justify-content: center;
 }
 
-
-/* Stylize header use name to match tweet button */
-.user-name h2 {
-  font-weight: 400;
-  background-color: #FFFFFF;
-  box-sizing: border-box;
-  color: #545149;
-  font-family: 'Source Sans Pro', sans-serif;
-  line-height: 1em;
-  width: 100%;
-  position: relative;
-  transform: rotate(-2deg);
-  padding:0.1em;
-}
-
- /* Resize profile pic as necessary */
-#header_profile_pic {
-  display: block;
-  margin: 0 auto;
-  border-radius: 50%;
-  width: 200px; /* explicit width for header profile image */
-  height: auto;
-}
-
-/* offset container position due to hidden form */
+/* Offset container position due to hidden form */
 #tweets-container {
   margin-top: 2em;
 }
 
-/* desktop and larger styles */
-
+/* Stylizes for desktop and larger styles */
 @media only screen and (min-width: 1024px) {
   body {
     flex-direction: row;
